Update to use python 3.14

--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,13 @@
 [tox]
-envlist = py310, py311, py312
+envlist = py310, py311, py312, py313, py314
 
 [testenv]
 basepython =
     py310: python3.10
     py311: python3.11
     py312: python3.12
+    py313: python3.13
+    py314: python3.14
 deps =
     poetry
 commands =
