--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.dependencies]
-python = ">=3.13,<3.15"
+python = ">=3.13"
 openai = "^1.0"
 termcolor = "2.3.0"
 typer = ">=0.3.2"
