--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,9 @@
 [tox]
-envlist = py313, py314
+envlist = py313
 
 [testenv]
 basepython =
     py313: python3.13
-    py314: python3.14
 deps =
     poetry
 commands =
